# forgeOS

./: .gitignore  Cargo.toml  ForgeOS-map.canvas  HANDOFF.md  README.md  START-HERE.md  clippy-out.txt
.github/workflows/: ci.yml
.kilo/agents/: backtester.md  coder.md  debugger.md  planner.md
.kilo/plans/: fix-shorts-only-expand-long-grid.md
.kiro/specs/lagshot-maker/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/phase-0-foundations/: .config.kiro  requirements.md
.kiro/steering/: environment.md  project.md  state.md
crates/depthscope/: Cargo.toml
crates/depthscope/src/: main.rs
crates/forge-anomaly/: Cargo.toml  PHASE2_OBSERVATIONS.md  README.md
crates/forge-anomaly/src/: backtest.rs  causal.rs  csv.rs  detector.rs  engine.rs  features.rs  lib.rs  null_edge.rs  pattern.rs  prng.rs  regime.rs  stats.rs  types.rs
crates/forge-anomaly/src/causal/: confidence.rs  engine.rs  mod.rs  rate_limit.rs  template.rs
crates/forge-anomaly/src/causal/templates/: absorption_reversal.rs  mod.rs
crates/forge-book/: Cargo.toml
crates/forge-book/src/: book.rs  lib.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: error.rs  event.rs  fixed.rs  lib.rs  side.rs  time.rs
crates/forge-data/: Cargo.toml
crates/forge-data/src/: checksum.rs  convert.rs  lib.rs  reader.rs  record.rs  synthetic.rs  writer.rs
crates/forge-data/tests/: roundtrip_gate.rs
crates/forge-depth/: Cargo.toml
crates/forge-depth/src/: cvd.rs  depth.rs  features.rs  lib.rs  trade_tracker.rs  volume_profile.rs  wall_tracker.rs
crates/forge-metrics/: Cargo.toml
crates/forge-metrics/src/: dsr.rs  lib.rs  normal.rs  paper.rs  pbo.rs  stats.rs
crates/forge-sim/: Cargo.toml
crates/forge-sim/src/: account.rs  coinflip.rs  engine.rs  fills.rs  lib.rs  regime.rs  shell.rs  strategy.rs
crates/forge-sim/tests/: null_edge.rs
crates/forge-strategy/: Cargo.toml
crates/forge-strategy/src/: absorption.rs  basis.rs  cvd.rs  imbalance.rs  lib.rs  momentum.rs  ofi.rs  regime.rs  wallflow.rs
crates/forge-strategy/tests/: no_fake_edge.rs
crates/forge-sweep/: Cargo.toml
crates/forge-sweep/src/: grid.rs  lib.rs  run.rs
crates/forgelag/: Cargo.toml
crates/forgelag/src/: engine.rs  feed.rs  lib.rs  maker.rs  strategy.rs
crates/forgelag/tests/: determinism.rs  fill_model.rs  maker_metrics.rs  null_edge.rs  null_edge_maker.rs
crates/sweepscope/: Cargo.toml
crates/sweepscope/src/: barrier.rs  cv.rs  grid.rs  main.rs  signal_source.rs  trade.rs
docs/: MOC-Decisions.md  MOC-Edge-Hunt.md  MOC-Engine.md  MOC-Strategies.md  PROJECT-CONTEXT.md  TODO.md  engine-design.md  migration-from-wallbot.md  obsidian-guide.md  roadmap.md
docs/legacy/: NOTES.md  bot-rebuild-notes.md  bot-workflow.md  engine-map.md  idea-transfer-workflow.md
docs/research/: annotator-visualizer.md  data-apis.md  edge-directions.md  forgelag-hunt.md  gap-close-study.md  lag-avenues-study.md  lag-improvements.md  lagshot-maker-hunt.md  lagshot-spec.md  latency-research.md  lead-lag-study.md  liquidation-cascade-study.md  oi-cascade-study.md  real-vs-fake-wall.md  research-README.md  research-charter.md  research-data-sources.md  research-flow-primitives.md  research-impact-measurement.md  research-quant-methods-and-repos.md  research-remaining-questions.md  research-strategy-edges.md  research-volume-profile-and-liquidations.md  subspace-design.md  sweep-study.md  volume-profile-study.md
docs/research/labels/: EXAMPLE-sweep-prior-high.md  README.md  _TEMPLATE.md
scripts/: run_anomaly_validation.sh
tools/: _git_push_merge.sh  _sync_box.sh  analyze_orderbook.py  batch_depthscope_eth.py  batch_depthscope_eth_v2.py  batch_enrich.py  batch_enrich2.py  batch_enrich_trades.sh  batch_pull_depthscope.sh  batch_pull_eth.py  batch_pull_new_dates.py  big_move_analysis.py  box-pull.sh  brute_chd_dates.py  brute_eth_book.py  brute_eth_chd.py  chd-to-parquet.py  chd_probe.py  check_and_run.sh  check_book_depth.py  check_both_dirs.py  check_data.sh  check_data_integrity.py  check_data_schema.py  check_dates.py  check_enriched.py  check_eth_dirs.py  check_eth_schema.py  check_eth_values.py  check_fwd_returns.py  check_market_dir.py  check_nan.py  check_raw_data.sh  check_schema.py  check_scorecard.py  check_v12.py  check_v12_detail.py  check_v12_v2.py  data_integrity_check.py  debug_date.py  (+35 more)
