# ForgeOS Rust workspace. Phase 0 lands forge-core (domain types) and
# forge-data (the packed *.forge event stream: writer, zero-copy mmap reader,
# checksum, and the parquet converter). Later phases add book/sim/strategy/
# metrics/sweep per docs/roadmap.md.
[workspace]
resolver = "2"
members = [
    "crates/forge-core",
    "crates/forge-data",
    "crates/forge-book",
    "crates/forge-sim",
    "crates/forge-strategy",
    "crates/forge-metrics",
    "crates/forge-sweep",
    "crates/forgelag",
    "crates/forge-depth",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"