[package]
name = "forge-anomaly"
version = "0.2.0"
edition = "2021"
description = "Volume-bar anomaly engine: multivariate Mahalanobis + Isolation Forest detection on order-flow microstructure"
publish = false

[dependencies]
forge-core = { path = "../forge-core" }
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[dev-dependencies]

[[bin]]
name = "anomalyscope"
path = "src/bin/anomalyscope.rs"

[[bin]]
name = "validate"
path = "src/bin/validate.rs"
