[package]
name = "sweepscope"
version = "0.1.0"
edition = "2021"
publish = false
description = "Sweep study tool: entry+exit grid search on depthscope CSVs with honest scoring (DSR, PBO, purged CV)."

[dependencies]
forge-anomaly = { path = "../forge-anomaly" }
forge-metrics = { path = "../forge-metrics" }
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
rayon = "1"
